testsuite/tests/typecheck/should_fail/all.T

test('tc001', normal, compile_fail, [''])
